@@ -3911,3 +3911,41 @@ SEXP R_igraph_rewire(SEXP graph, SEXP pn, SEXP pmode) {
   return result;
 }
   
+SEXP R_igraph_to_directed(SEXP graph, SEXP pmode) {
+  
+  igraph_t g;
+  igraph_integer_t mode=REAL(pmode)[0];
+  SEXP result;
+
+  R_igraph_before();
+  
+  R_SEXP_to_igraph_copy(graph, &g);
+  igraph_to_directed(&g, mode);
+  PROTECT(result=R_igraph_to_SEXP(&g));
+  igraph_destroy(&g);
+  
+  R_igraph_after();
+  
+  UNPROTECT(1);
+  return result;
+}
+
+SEXP R_igraph_to_undirected(SEXP graph, SEXP pmode) {
+  
+  igraph_t g;
+  igraph_integer_t mode=REAL(pmode)[0];
+  SEXP result;
+
+  R_igraph_before();
+  
+  R_SEXP_to_igraph_copy(graph, &g);
+  igraph_to_undirected(&g, mode);
+  PROTECT(result=R_igraph_to_SEXP(&g));
+  igraph_destroy(&g);
+  
+  R_igraph_after();
+  
+  UNPROTECT(1);
+  return result;
+}
+
